blured light version

--- a/picom.conf
+++ b/picom.conf
@@ -25,6 +25,16 @@ shadow-offset-x = -7;
 # shadow-offset-y = -15
 shadow-offset-y = -7;
 
+# blur: {
+# 	method = "dual_kawase";
+# 	strength = 9;
+# 	background = true;
+# 	background-frame = true;
+# 	background-fixed = true;
+# }
+
+# backend = "glx";
+
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
@@ -162,11 +172,13 @@ focus-exclude = [
 opacity-rule = [
   "80:class_g		= 'Bar'",
   "90:class_g		= 'slop'",
-  "90:class_g		= 'Alacritty'",
+  "90:class_g   = 'jetbrains-idea'",
+  "80:class_g		= 'Alacritty'",
   "100:class_g		= 'mpv'",
   "100:class_g		= 'Polybar'",
-  "100:class_g		= 'firefox'",
-  "100:class_g		= 'dmenu'"
+  "95:class_g		= 'firefox'",
+  "60:class_g		= 'dmenu'",
+  "70:class_g		= 'Rofi'",
 ];
 
 
@@ -176,10 +188,10 @@ opacity-rule = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
-# blur-size = 12
+blur-method = "dual_kawase"
+blur-size = 10
 #
-# blur-deviation = false
+blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
@@ -196,7 +208,7 @@ opacity-rule = [
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+blur-background-fixed = false
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -227,11 +239,11 @@ blur-background-exclude = [
 #
 
 # backend = 'glx'
-backend = "xrender";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = false
+vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -245,6 +257,8 @@ mark-wmwin-focused = true;
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
 mark-ovredir-focused = true;
+
+corner_radius = 10;
 
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -262,7 +276,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+# refresh-rate = 144
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
